{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 425,
  "lineage": "efef1afd-3f3d-1e65-e879-0eb8e2a57686",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0231a0bdc9868dba1",
            "arn": "arn:aws:ec2:us-east-1:211125355004:elastic-ip/eipalloc-0231a0bdc9868dba1",
            "domain": "vpc",
            "id": "eipalloc-0231a0bdc9868dba1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-208-246-24.compute-1.amazonaws.com",
            "public_ip": "3.208.246.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07caf09b362be10b8",
            "arn": "arn:aws:ec2:us-east-1:211125355004:instance/i-0205f78ade0877d23",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0205f78ade0877d23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ef4197a3cdfafc9",
            "private_dns": "ip-10-0-1-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0af5717367de2e60f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-05e48cb8cf1d159f6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0529b494e8c2b04fd",
            "tags": {
              "Environment": "dev",
              "Name": "my-project-apache-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-project-apache-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e48cb8cf1d159f6"
            ]
          },
          "dependencies": [
            "module.networking.aws_security_group.web_sg",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:internet-gateway/igw-01330af4e6cb63f12",
            "id": "igw-01330af4e6cb63f12",
            "owner_id": "211125355004",
            "tags": {
              "Name": "my-project-igw"
            },
            "tags_all": {
              "Name": "my-project-igw"
            },
            "vpc_id": "vpc-09f6615a51780c92a"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0231a0bdc9868dba1",
            "connectivity_type": "public",
            "id": "nat-01d06b994db33d33e",
            "subnet_id": "subnet-0f78c5280cc6c3f2f",
            "tags": {
              "Name": "my-project-NAT-gw"
            },
            "tags_all": {
              "Name": "my-project-NAT-gw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0231a0bdc9868dba1",
            "association_id": "eipassoc-0a4040d8aa5140135",
            "connectivity_type": "public",
            "id": "nat-08ca3f3094350d6d0",
            "network_interface_id": "eni-03bdb68313caa3af0",
            "private_ip": "10.0.11.183",
            "public_ip": "3.208.246.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c62886854a56570",
            "tags": {
              "Name": "my-project-NAT-gw"
            },
            "tags_all": {
              "Name": "my-project-NAT-gw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0231a0bdc9868dba1",
            "connectivity_type": "public",
            "id": "nat-06c83d9f506cc6e08",
            "subnet_id": "subnet-0f5555c6c22d377bb",
            "tags": {
              "Name": "my-project-NAT-gw"
            },
            "tags_all": {
              "Name": "my-project-NAT-gw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:route-table/rtb-0e8bf87a8d5c73cda",
            "id": "rtb-0e8bf87a8d5c73cda",
            "owner_id": "211125355004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-project-private-route-table"
            },
            "tags_all": {
              "Name": "my-project-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f6615a51780c92a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3903495b43f9c33",
            "route_table_id": "rtb-0e8bf87a8d5c73cda",
            "subnet_id": "subnet-0529b494e8c2b04fd"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:security-group/sg-05e48cb8cf1d159f6",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e48cb8cf1d159f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-project-web-sg",
            "name_prefix": "",
            "owner_id": "211125355004",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09f6615a51780c92a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-0529b494e8c2b04fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0529b494e8c2b04fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-private-subnet"
            },
            "tags_all": {
              "Name": "my-project-private-subnet"
            },
            "vpc_id": "vpc-09f6615a51780c92a"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-0f78c5280cc6c3f2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f78c5280cc6c3f2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-09f6615a51780c92a"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-08c62886854a56570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c62886854a56570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-09f6615a51780c92a"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-0f5555c6c22d377bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5555c6c22d377bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-09f6615a51780c92a"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:vpc/vpc-09f6615a51780c92a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-050c41d3c1147d02b",
            "default_route_table_id": "rtb-08eb740a0720a2ae3",
            "default_security_group_id": "sg-0919695aa3bae0134",
            "dhcp_options_id": "dopt-091fa171af1c13b04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f6615a51780c92a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08eb740a0720a2ae3",
            "owner_id": "211125355004",
            "tags": {
              "Name": "my-project-vpc"
            },
            "tags_all": {
              "Name": "my-project-vpc"
            }
          }
        }
      ]
    }
  ]
}